deploys/api-mxb-cc.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-mxb-cc
  name: api-mxb-cc
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-mxb-cc
  template:
    metadata:
      labels:
        app: api-mxb-cc
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: mxbcc/mxb.cc-server:master
          imagePullPolicy: IfNotPresent
          name: api-mxb-cc
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app/src/.keystone/.env.production
              name: volume-config
              subPath: .env.production
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: .env.production
                path: .env.production
            name: api-mxb-cc-configmap
          name: volume-config
