deploys/mxb.cc-server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mxb-server
  name: mxb-server
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mxb-server
  template:
    metadata:
      labels:
        app: mxb-server
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: mxbcc/mxb.cc-server:master
          imagePullPolicy: IfNotPresent
          name: mxb-server
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app/src/.keystone/.env.production
              name: volume-config
              subPath: .env.production
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: .env.production
                path: .env.production
            name: mxb-server-configmap
          name: volume-config
