deploys/api-mxb-cc.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-mxb-cc-service
  namespace: default
spec:
  clusterIP: None
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: api-mxb-cc
  type: ClusterIP
