deploys/mxb.cc-server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mxb-server-service
  namespace: default
spec:
  clusterIP: None
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: mxb-server
  type: ClusterIP
