deploys/api-mxb-cc.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-api-mxb-cc-redirectschema@kubernetescrd
  name: api-mxb-cc-https-ingress
  namespace: default
spec:
  rules:
    - host: api.mxb.cc
      http:
        paths:
          - backend:
              service:
                name: api-mxb-cc-service
                port:
                  number: 3000
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: api-mxb-cc-certs
