deploys/mxb.cc-server.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-mxb-server-redirectschema@kubernetescrd
  name: mxb-server-https-ingress
  namespace: default
spec:
  rules:
    - host: api.mxb.cc
      http:
        paths:
          - backend:
              service:
                name: mxb-server-service
                port:
                  number: 3000
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: mxb-server-certs
